# halytics

./: .travis.yml  README.md  halytics.cabal  stack.yaml
docs/: doc-index.html  index-frames.html  index.html
docs/StateVar-1.1.0.4/: Data-StateVar.html
docs/abstract-deque-0.3/: Data-Concurrent-Deque-Class.html  Data-Concurrent-Deque-Debugger.html  Data-Concurrent-Deque-Reference-DequeInstance.html  Data-Concurrent-Deque-Reference.html  abstract-deque.haddock  abstract-deque.txt  doc-index.html  index-frames.html  index.html  mini_Data-Concurrent-Deque-Class.html  mini_Data-Concurrent-Deque-Debugger.html  mini_Data-Concurrent-Deque-Reference-DequeInstance.html  mini_Data-Concurrent-Deque-Reference.html
docs/abstract-par-0.3.3/: Control-Monad-Par-Class.html  Control-Monad-Par-Unsafe.html  abstract-par.haddock  abstract-par.txt  doc-index.html  index-frames.html  index.html  mini_Control-Monad-Par-Class.html  mini_Control-Monad-Par-Unsafe.html
docs/adjunctions-4.3/: Control-Comonad-Representable-Store.html  Control-Comonad-Trans-Adjoint.html  Control-Monad-Representable-Reader.html  Control-Monad-Representable-State.html  Control-Monad-Trans-Adjoint.html  Control-Monad-Trans-Contravariant-Adjoint.html  Control-Monad-Trans-Conts.html  Data-Functor-Adjunction.html  Data-Functor-Contravariant-Adjunction.html  Data-Functor-Contravariant-Rep.html  Data-Functor-Rep.html  adjunctions.haddock
docs/aeson-0.11.2.0/: Data-Aeson-Types.html  Data-Aeson.html  aeson.haddock
docs/all/: doc-index-124.html  doc-index-35.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-46.html  doc-index-58.html  doc-index-60.html  doc-index-62.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Y.html  doc-index-Z.html  index-frames.html  index.html
docs/attoparsec-0.13.0.2/: Data-Attoparsec-ByteString-Char8.html  Data-Attoparsec-Number.html  Data-Attoparsec-Text.html  attoparsec.haddock
docs/base-orphans-0.5.4/: Data-Orphans.html
docs/bifunctors-5.2/: Data-Biapplicative.html  Data-Bifoldable.html  Data-Bitraversable.html
docs/cereal-0.5.2.0/: Data-Serialize-Get.html  Data-Serialize-IEEE754.html  Data-Serialize-Put.html  Data-Serialize.html  cereal.haddock  cereal.txt  doc-index.html  index-frames.html  index.html  mini_Data-Serialize.html
docs/comonad-4.2.7.2/: Control-Comonad.html
docs/contravariant-1.4/: Data-Functor-Contravariant.html
docs/distributive-0.5.0.2/: Data-Distributive.html
docs/erf-2.0.0.0/: Data-Number-Erf.html  doc-index.html  erf.haddock  erf.txt  index-frames.html  index.html  mini_Data-Number-Erf.html
docs/free-4.12.4/: Control-Monad-Free-Church.html  Control-Monad-Free-Class.html  Control-Monad-Free.html  Control-Monad-Trans-Free-Church.html  Control-Monad-Trans-Free.html  Control-Monad-Trans-Iter.html  free.haddock
docs/halytics-0.1.0.0/: Halytics-Metric-Statistics.html  Halytics-Metric.html  Halytics-Monitor-Lens-TH.html  Halytics-Monitor-Lens.html  Halytics-Monitor-Tuple.html  Halytics-Monitor.html  Halytics-Time.html  Halytics-Tutorial.html  doc-index.html  halytics.haddock  halytics.txt  index-frames.html  index.html  mini_Halytics-Metric-Statistics.html  mini_Halytics-Metric.html  mini_Halytics-Monitor-Lens-TH.html  mini_Halytics-Monitor-Lens.html  mini_Halytics-Monitor-Tuple.html  mini_Halytics-Monitor.html  mini_Halytics-Time.html  mini_Halytics-Tutorial.html
docs/kan-extensions-4.2.3/: Control-Comonad-Density.html  Control-Monad-Co.html  Control-Monad-Codensity.html  Data-Functor-Contravariant-Coyoneda.html  Data-Functor-Contravariant-Day.html  Data-Functor-Contravariant-Yoneda.html  Data-Functor-Coyoneda.html  Data-Functor-Day.html  Data-Functor-Kan-Lan.html  Data-Functor-Kan-Lift.html  Data-Functor-Kan-Ran.html  Data-Functor-Kan-Rift.html  Data-Functor-Yoneda.html  kan-extensions.haddock
docs/lens-4.13/: Control-Exception-Lens.html  Control-Lens-At.html  Control-Lens-Combinators.html  Control-Lens-Cons.html  Control-Lens-Each.html  Control-Lens-Empty.html  Control-Lens-Equality.html  Control-Lens-Extras.html  Control-Lens-Fold.html  Control-Lens-Getter.html  Control-Lens-Indexed.html  Control-Lens-Internal-Bazaar.html  Control-Lens-Internal-ByteString.html  Control-Lens-Internal-Coerce.html  Control-Lens-Internal-Context.html  Control-Lens-Internal-Deque.html  Control-Lens-Internal-Exception.html  Control-Lens-Internal-FieldTH.html  Control-Lens-Internal-Fold.html  Control-Lens-Internal-Getter.html  Control-Lens-Internal-Indexed.html  Control-Lens-Internal-Instances.html  Control-Lens-Internal-Iso.html  (+58 more)
examples/: Example.hs  Server.hs  halytics-examples.cabal  stack.yaml
script/: make-doc
(+285 files in other folders)
