name:                halytics
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/nmattia/halytics#readme
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           2010 Nicolas Mattia
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
                       base >= 4.7 && < 5,
                       clock,
                       lens,
                       safe,
                       split,
                       statistics,
                       vector
  exposed-modules:
                       Halytics.Metric
                       Halytics.Metric.Statistics
                       Halytics.Monitor
                       Halytics.Monitor.Internal
                       Halytics.Monitor.Lens
                       Halytics.Time
  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields



test-suite halytics-test
  type:       exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language:    Haskell2010
  main-is:          Test/Spec.hs
  build-depends:       base
                     , lens
                     , halytics
                     , tasty
                     , tasty-hunit
