name:                halytics-examples
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5,
                       deepseq
  default-language:    Haskell2010
  exposed-modules:     Server

executable halytics-examples
  main-is:             Example.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       deepseq,
                       halytics-examples,
                       random
